crates/lang/macro/tests/ui/contract/fail/message-self-receiver-invalid-01.stderr
error: ink! messages must have `&self` or `&mut self` receiver
  --> $DIR/message-self-receiver-invalid-01.rs:15:24
   |
15 |         pub fn message(this: &Self) {}
   |                        ^^^^^^^^^^^
